--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "i18next": "^25.8.11",
+    "i18next-browser-languagedetector": "^8.2.1",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.1.5",
     "pg": "^8.18.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.64.0",
+    "react-i18next": "^16.5.4",
     "sonner": "^2.0.7",
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
